Clean Dockerfile and fix startup.sh script